[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudasia1over1-25"
version = "0.1.0"
description = "Cloudbet pre-match deep Asian Handicap scanner for soccer events."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
]

[project.scripts]
cloudasia-scan = "cloudasia_scanner.cli:main"
cloudasia-live-monitor = "cloudasia_scanner.live_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
